flux/projects/greater/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: greater
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: greater
    app.kubernetes.io/part-of: ${env}
