flux/projects/greater/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: greater
spec:
  parentRefs:
    - name: eg
      namespace: envoyproxy-gateway-system
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: greater
          port: 80
      matches:
        - path:
            value: /prod
